here are some much needed changes. Content added to some pages!

--- a/about_me.html
+++ b/about_me.html
@@ -48,19 +48,21 @@
 
   			<ul class="nav">
   				<hr>
-  				<li><a href="index.html">Home</a></li>
-  				<li><a href="projects.html">Projects</a></li>
   				<li><a class="active" href="about_me.html">About Me</a></li>
+  				<li><a href="projects.html">Projects</a></li>
+  				<li><a href="index.html">Home</a></li>
   				<li><a href="resume.html">Resume</a></li>
   				<li><a href="contact_info.html">Contact Me</a></li>
   				<hr>
 			</ul>
 			<br>
  
-  			<div>
-  				<p style="font-size: 60px; color: red;">
-  				 	This portion of the site is under maintenance until further notice and until my lazy self feels like doing it. ~Austin 
-  				 </p>
+  			<div style="text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
+  				<p style=" margin-bottom: 5%;">Welcome to my about me page!</p>
+
+  				<p style="line-height: 30px; margin-bottom: 5%; width: 100%;">In order to get a feel for who I am, I suppose I should tell you a little about myself.</p>
+
+  				<p style="line-height: 30px; margin-bottom: 5%; width: 100%;">I was born and raised in South Carolina, where I attended all of my formal schooling. </p>
 
 
 			</div>
