--- a/projects.html
+++ b/projects.html
@@ -48,39 +48,24 @@
 
   			<ul class="nav">
   				<hr>
-  				<li><a href="index.html">Home</a></li>
   				<li><a href="about_me.html">About Me</a></li>
   				<li><a class="active" href="projects.html">Projects</a></li>
+  				<li><a href="index.html">Home</a></li>
   				<li><a href="resume.html">Resume</a></li>
   				<li><a href="contact_info.html">Contact Me</a></li>
   				<hr>
 			</ul>
 			<br>
  
-  			<div>
-  				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
-				<p>Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+  			<div style="text-align: left; margin-left: 10%; margin-right: 10%; font-size: 125%;">
+  				<p style="line-height: 30px; margin-bottom: 4%;">Welcome to my projects page! This page is to go into a little more explanation about some of the projects
+  				that I've done over the years. Listing and giving a brief summary on my resume is all fine and well but I don't think I can really do some of these projects justice in such few words.</p>
 
+  				<p><STRONG>"InsurTix"</STRONG></p>
+  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%;">The first project I want to talk about is a Mobile Application me, and a few friends from class were tasked with making for a client. I can say it was overall an interesting project to contend with. The client wanted us to develop essentially an app that would be used to insure parking tickets. Going about this we wanted it to be compatible with both Andriod and IOS so we made a hybrid web app with Ionic Cordova as well as we used HTML5, CSS, and TypeScript. To make sure we had proper version control we used GitHub to make changes and stored our database information with a site called <a href"https://www.back4app.com/" style="text-decoration: none; color: #3498DB;">Back4App.</a> Sadly the client pulled out of the project before it was completed but overall it was a great experience for me to step my way into the web application field. We as a group all had a lot we learned in a very short amount of time, like for example using embedded devices like the camera and location features of your phone to take pictures and convert them into a small enough data size that we could store them into our database. This project was a lot of fun and I would like to potentially pursue more projects like this one.</p>
+
+  				<p><STRONG>"Sense-Able"</STRONG></p>
+  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%;">This project was hands down one of the most stressful and exciting projects that I have had the pleasure of working on. This is Sense-Able. This project was my senior college project and a group of 4 of my peers and myself were tasked by a client, Peter Mumola, to create a research tool for a very specific problem. The problem was to help those with visual impairments to be able to explore the world around them more freely. We were given a LeddarTech LIDAR sensor and a year of time to give them a product to pitch to their research department as well as to other companies to get them on board. Essentially we started with making a Linux application using QT5 as our coding environment and C++ as our programming language of choice. We also used a webcamera which we configured to run in real time as well as integrated an object recognition software to work with that live feed. If you're curious or just want to check out this for yourself we do still have the respository that can be accessed<a href="https://github.com/SCCapstone/Sense-Able" style="text-decoration: none; color: #3498DB;"> here </a> and a website which we dedicated to the project which can be found <a href="https://sccapstone.github.io/Sense-Able/" style="text-decoration: none; color: #3498DB;">here.</a></p>
 
 			</div>
 			<br><br>
