The site is mostly as good as its going to get. Will fix more later

--- a/about_me.html
+++ b/about_me.html
@@ -56,13 +56,24 @@
   				<hr>
 			</ul>
 			<br>
+			<br>
 
-			<div style="line-height: 30px; text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
-  				<p style=" margin-bottom: 4%; width: 100%"></p>
+			<div>
+				<img src="https://user-images.githubusercontent.com/31483647/58519401-6f533880-8181-11e9-97a3-330694bea09d.jpg" width="350" height="450" style="border:10px outset #4388B6;" id="boxshadow">
+			</div>
+			<br>
+
+			<div style="line-height: 30px; text-align: left; margin-left: 15%; margin-right: 15%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%">&emsp;&nbsp; My name is <Strong>Austin Scampini</Strong> and I am a Computer Engineer. I recently completed my Bachelor’s Degree in Computer Engineering from the <a href= "https://www.sc.edu/" style="text-decoration: none; color: #3498DB;">University of South Carolina</a> and I am in the market for a Computer Science/Engineering job in the Charleston, South Carolina area. I have a background in algorithmic design and computer hardware design and implementation. This background also includes some aspects of electrical engineering. I have experience programming embedded systems, software development, debugging computer systems, and circuit analysis. </p>
+
+  				<p style=" margin-bottom: 4%; width: 100%">&emsp;&nbsp; I have a very deep passion for Computer Engineering and some of my goals are continuing to learn and to push my knowledge within my field. I recognize that I do not have what many would consider much professional work experience, but as a recent graduate, I have completed many projects that have helped to shape my extensive knowledge of my field. I would like a chance to show the skills that I have learned, and to become a valuable asset to a team of individuals or a company where I can further hone my craft.   </p>
 
 			</div>
- 
-			<br><br>
+			
+			<div style="line-height: 30px; text-align: center; margin-left: 15%; margin-right: 15%; font-size: 120%;">
+					<a style="align-content: center;"><img src="https://fontmeme.com/permalink/190529/b9435d48ee892d4de30583c1068f09e2.png" alt="cursive-fonts" border="0"></a>
+ 			</div>
+			<br><br><br>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
 				<br>
