--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
 			</ul>
 			<br>
  
-  			<div style="line-height: 30px; text-align: left; margin-left: 10%; margin-right: 10%; font-size: 120%;">
-  				<p style=" margin-bottom: 4%; width: 100%">Welcome to my website! This site is my attempt to keep myself busy during waiting periods while looking for a career as well as it is a great e-portfolio to present during interviews. If you happen to be looking at my web-page and think i could be a good fit for your company, feel free to check out my resume listed under the resume tab or <a href="resume.html" style="text-decoration: none; color: #3498DB;">click here.</a></p>
-
-  				<p style="line-height: 30px; margin-bottom: 4%; width: 100%;">My name is <Strong>Austin Scampini</Strong> and I am a Computer Engineer. I recently just completed my Bachelor's Degree in Computer Engineering from the <a href= "https://www.sc.edu/" style="text-decoration: none; color: #3498DB;">University of South Carolina.</a> and I am in the market for a Computer Science/Engineering job in the Charleston, South Carolina area. I have a primarily software and hardware background in computers with a smattering of electrical engineering and embedded systems.</p>
+  			<div style="line-height: 30px; text-align: left; margin-left: 15%; margin-right: 15%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%">&emsp;&nbsp;Welcome to my website! The making of this site is meant to keep myself busy during waiting periods, while looking for a career as well as it is a great e-portfolio to present during interviews. If you happen to be looking at my web-page and think I could be a good fit for your company, feel free to check out my resume listed under the resume tab or <a href="resume.html" style="text-decoration: none; color: #3498DB;">click here.</a></p>
 
 			</div>
-			<br><br>
+			<br>
+			<div style="line-height: 30px; margin-left: 15%; margin-right: 15%; font-size: 120%;">
+				<img src="https://user-images.githubusercontent.com/31483647/58520650-be4f9c80-8186-11e9-952f-5a8b1048ea3c.jpg" width="700" height="450" style="border:10px outset #4388B6;align-content: center;" id="boxshadow">
+			</div>
+			<br><br><br>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
 				<br>
