--- a/contact_info.html
+++ b/contact_info.html
@@ -57,14 +57,15 @@
 			</ul>
 			<br>
  			
- 			<div style="line-height: 30px; margin-left: 10%; margin-right: 10%; font-size: 120%;">
-  				<p style=" margin-bottom: 4%; width: 100%">If you want to get in contact will me feel free to email me at </p>
+ 			<div style="line-height: 30px; margin-left: 15%; margin-right: 15%; font-size: 120%;">
+  				<p style=" margin-bottom: 4%; width: 100%">If you would like to contact me feel free to email me at </p>
 
   				<p style=" margin-bottom: 4%; width: 100%">austinscampini@gmail.com</p>
 
-  				<p style=" margin-bottom: 4%; width: 100%">and i will get back to you as quickly as possible!</p>
+  				<p style=" margin-bottom: 4%; width: 100%">and I will get back to you as quickly as possible!</p>
 
 			</div>
+			<br>
 
 			<div class="row" style="background-color: #325156; color: #5a9099;">
 				<br>
@@ -75,6 +76,5 @@
 		</form>
 	</div>
 </center>
-
 </body>
 </html>
